# anki-ai

./: .gitignore  Makefile  README.md  TODOs.md  anki-advice.md  integrate-assistant-ui.md  pyproject.toml  temp.txt
anki_ai/: __init__.py  card_generation_prompt.md  card_generation_workflows.py  card_regeneration_workflows.py  card_types.py  collection_services.py  collection_transport.py  config.json  config.md  convert_pdf_to_markdown_cli.py  file_conversion_service.py  file_conversion_transport.py  generate_cards_cli.py  generation_service.py  generation_transport.py  gui.py  manifest.json  markdown_renderer.py  reviewer_regeneration.py  transport.py
anki_ai/prompts/: _card_generation_prompt.md.jinja  _card_regeneration_prompt.md.jinja  answer_with_explanation.md.jinja  basic.md.jinja  markdown.md.jinja  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: convert_html_to_markdown.py  convert_pdf_to_markdown.py  convert_youtube_url_to_markdown.py  generate_cards.py  hello_claude_code.py
test_materials/: Top 30 Agentic AI Interview Questions and Answers for 2026.md  cs336-lecture-4-architectures-transcript.txt  how-to-make-anki-cards.md  story-of-geology-of china.md
tests/: __init__.py  fakes.py  test_collection_services.py  test_collection_transport.py  test_convert_pdf_to_markdown_cli.py  test_file_conversion_service.py  test_file_conversion_transport.py  test_generate_cards_cli.py  test_generation_service.py  test_generation_transport.py  test_markdown_renderer.py  test_reviewer_regeneration.py  test_transport.py
(+18 files in other folders)
