[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-ai-addon"
version = "0.1.0"
description = "Basic Anki add-on scaffold."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "claude-agent-sdk",
  "jinja2",
  "markitdown[pdf,docx,pptx,xlsx,xls,youtube-transcription]",
  "markdown-it-py",
  "mdit-py-plugins",
  "nh3",
  "openai-codex@git+https://github.com/openai/codex.git#subdirectory=sdk/python",
]

[project.optional-dependencies]
dev = [
  "aqt[qt6]>=24.0",
  "mypy>=1.8",
]

[tool.setuptools]
packages = ["anki_ai"]

[tool.setuptools.package-data]
anki_ai = [
  "prompts/*.md.jinja",
  "web/*.html",
  "web/assets/*",
]

[tool.mypy]
python_version = "3.9"
files = ["anki_ai"]
exclude = "anki_ai/(vendor|web)/"
strict = true
warn_unused_configs = true
